Changelog
=========

7.8-dev - (unreleased)
----------------------
* Change: removed condition for loading archive_dialog.js since it needs
  to load when the object is archived and instead set the authenticated flag
  to true
  [ichimdav]

7.7 - (2014-09-15)
------------------
* Change: finished archive unarchive content rules tests
  [ichimdav refs #20287]

7.6 - (2014-08-27)
------------------
* Feature: WIP created unit tests for the archive unarchive content rules
  [ghicaale refs #20287]

7.5 - (2014-08-12)
------------------
* Bug fix: fixed JS registry conditon for archive_dialog.js
  [ghicaale refs #20389]
* Feature: WIP created unit tests for the archive unarchive content rules
  [ghicaale refs #20287]

7.4 - (2014-06-24)
------------------
* Bug fix: fixed archive/unarchive content rules logic.
  [ghicaale refs #19953]
* Upgrade step: enable on production the "Archive previous version" and
  "Unarchive previous version" content rules.
  [ghicaale refs #19953]

7.3 - (2014-06-02)
------------------
* Bug fix: fixed "Archive/Unarchive" content rule action not to crash when there
  are no versions
  [ghicaale refs #19918]

7.2 - (2014-05-13)
------------------
* Bug fix: fixed various warning triggered on Zope startup
  [ghicaale refs #19289]
* Bug fix: decode the initiator, reason and message form fields in order to
  avoid error when non asci characters are passed in the form
  [ichim-david refs #19334]
* Bug fix: archive process no longer crashes if alsoChildren option is selected
  and the object contained a discussion item
  [ichim-david refs #19334]
* Upgrade step: from Plone root:
   - run /@@archive_previous_versions?alsoChildren=True
   - [ichimdav refs #18740]
* Bug fix: archive_previous_versions BrowserView now correctly extends the
  returning list when calling archive_obj_and_children
  [ichimdav refs #18740]

7.1 - (2014-03-10)
------------------
* Change: updated wording of the archive options presented within the archive
  dialog